feat(portfolio): LangGraph 기반 AI Agent Studio 프로젝트 추가
- PROJECTS 상수에 AI Agent Studio(LangGraph Lab) 데이터 추가
- AI 컨시어지 지식 베이스(knowledge.json)에 프로젝트 상세 정보 업데이트
- 메인 페이지 기술 스택 목록에 LangGraph 키워드 추가

--- a/src/lib/knowledge.json
+++ b/src/lib/knowledge.json
@@ -24,6 +24,10 @@
         "content": "A high-performance content platform built using Next.js 15, optimized for SEO, speed, and premium readability."
     },
     {
+        "source": "Project: AI Agent Studio (LangGraph Lab)",
+        "content": "AI Agent Studio is a centralized laboratory for developing and mastering autonomous AI agents. It features over 20 distinct projects demonstrating various agentic workflows using LangGraph, CrewAI, and AutoGen. Key agents include a News Reader, Job Hunter, and Deep Research Clone. The tech stack focuses on Google Gemini (including Gemini 1.5 Flash), Python, and sophisticated web scraping tools like Firecrawl."
+    },
+    {
         "source": "Investment Flow (BondBase)",
         "content": "The investment process in BondBase follows a structured flow: 1. Faucet (for test assets) -> 2. Bond Market exploration -> 3. Investment execution. Users can track their portfolio and impact map."
     }
